--- a/driver/ldd/mips_asm_hello.htm
+++ b/driver/ldd/mips_asm_hello.htm
@@ -49,104 +49,105 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://github.com/steward-fu/ldd">Source Code</a><br><br>
+1. <a href="https://github.com/steward-fu/website/releases/tag/ldd">ldd</a><br><br>
 
 <b>hello, world!</b>是一個相當經典的入門教學範例，從這個範例的框架，使用者可以一探Linux的精簡之美，當然，它主要表達的目的，更多是對於環境的操作熟悉<br><br>
 
 ldd.S
 </p>
 <pre class="brush:asm">
-.set noreorder
+    .set noreorder
 
-.global init_module
-.global cleanup_module
+    .global init_module
+    .global cleanup_module
 
-.macro push arg:req
-  addiu $sp, -4
-  sw \arg, 0($sp)
-.endm
+    .macro push arg:req
+        addiu $sp, -4
+        sw \arg, 0($sp)
+    .endm
 
-.macro pop arg:req
-  lw \arg, 0($sp)
-  addiu $sp, 4
-.endm
+    .macro pop arg:req
+        lw \arg, 0($sp)
+        addiu $sp, 4
+    .endm
 
-.section .modinfo, "ae"
+    .section .modinfo, "ae"
 __UNIQUE_ID_0: .asciz "license=GPL"
 __UNIQUE_ID_1: .asciz "author=Steward Fu"
 __UNIQUE_ID_2: .asciz "description=Linux Driver"
 
-.section .text
+    .section .text
 msg_load:   .asciz "hello, world!\n" 
 msg_unload: .asciz "unload it\n"
 
-.align 2
-.section .text
+    .align 2
+    .section .text
 init_module:
-  push $ra
-  la $a0, msg_load
-  jal printk
-  nop
-  pop $ra
-  jr $ra
-  move $v0, $0
+    push $ra
+    la $a0, msg_load
+    jal printk
+    nop
+    pop $ra
+    jr $ra
+    move $v0, $0
 
 cleanup_module:
-  push $ra
-  la $a0, msg_unload
-  jal printk
-  nop
-  pop $ra 
-  jr $ra
-  move $v0, $0
+    push $ra
+    la $a0, msg_unload
+    jal printk
+    nop
+    pop $ra 
+    jr $ra
+    move $v0, $0
 </pre>
 <p>
 <b>init_module</b>: 系統載入驅動程式時，第一時間呼叫使用<br>
-<b>cleanup_module</b>: 卸載驅動程式時，最後時間被系統呼叫使用<br>
+<b>cleanup_module</b>: 卸載驅動程式時，最後時間被系統呼叫使用<br><br>
+
 MIPS Assembly最擾人的地方就屬<b>Branch Delay Slot</b>，意思就是，執行Branch指令後，它的下一個指令會先被執行，然後才執行Branch指令(延遲一個指令)，這也是為何<b>jal printk</b>後面要有一個nop，如果沒有加這個nop，<b>pop $ra</b>就會被執行，導致呼叫printk後，無法回到正常的位置，而<b>jr $ra</b>指令後面的<b>move $v0, $0</b>也是這樣的意思，這是由於MIPS架構因素所致，剛接觸MIPS Assembly的使用者需要特別注意這個問題<br><br>
 
 Makefile
 </p>
 <pre>
 export ARCH=mips
-export CROSS_COMPILE=mipsel-linux-
+export CROSS_COMPILE=/opt/gcc-8.30/bin/mipsel-linux-
 export AS=${CROSS_COMPILE}as
-KERNEL=$(HOME)/Downloads/kernel
+
+KERNEL=$(HOME)/kernel
 
 obj-m += main.o
 main-objs:= ldd.o
+
 all:
-	$(AS) -o ldd.o ldd.S
+	$(AS) -o ldd.o ldd.S -msoft-float
 	make -C $(KERNEL) M=$(PWD) modules
 
 clean:
 	make -C $(KERNEL) M=$(PWD) clean
-</pre>
-<p>
-P.S. make指令前面是一個Tab字元，而非空白字元<br><br>
+</pre><br>
 
+<p>
 編譯
 </p>
 <pre>
 $ make
-mipsel-linux-as -o ldd.o ldd.S
-make -C kernel M=hello modules
-make[1]: Entering directory 'kernel'
-  AS [M]  hello/ldd.o
-  LD [M]  hello/main.o
-  Building modules, stage 2.
-  MODPOST 1 modules
-  CC      hello/main.mod.o
-  LD [M]  hello/main.ko
-make[1]: Leaving directory 'kernel'
+    mipsel-linux-as -o ldd.o ldd.S
+    make -C kernel M=hello modules
+    make[1]: Entering directory 'kernel'
+        AS [M]  hello/ldd.o
+        LD [M]  hello/main.o
+        Building modules, stage 2.
+        MODPOST 1 modules
+        CC      hello/main.mod.o
+        LD [M]  hello/main.ko
+    make[1]: Leaving directory 'kernel'
 </pre><br>
 <p>
-接著把<b>main.ko</b>放到USB隨身碟，進入系統後，執行如下指令掛載驅動程式：
+接著複製<b>main.ko</b>到USB隨身碟，將USB插入開發板，開機進入系統後，執行如下指令掛載驅動程式：
 </p>
 <pre>
-# mount /dev/sda1 /mnt
 # insmod /mnt/main.ko 
-  hello, world!
+    hello, world!
 </pre><br>
 
 <p>
@@ -154,7 +155,7 @@ make[1]: Leaving directory 'kernel'
 </p>
 <pre>
 # rmmod main
-  unload it
+    unload it
 </pre><br>
 
 <p>
