--- a/driver/ldd/mips_asm_setup.htm
+++ b/driver/ldd/mips_asm_setup.htm
@@ -74,7 +74,7 @@
 $ cd
 $ wget https://github.com/steward-fu/website/releases/download/ldd/mips_gcc-8.30.tar.gz
 $ tar xvf mips_gcc-8.30.tar.gz
-$ sudo mv mt7688 /opt/
+$ sudo mv gcc-8.30 /opt/
 
 $ wget https://github.com/steward-fu/website/releases/download/ldd/mips_kernel.tar.gz
 $ tar xvf mips_kernel.tar.gz
