--- a/driver.htm
+++ b/driver.htm
@@ -153,7 +153,7 @@ Linux Device Driver (LDD)</h3>
         ioctl</a><br>
 
 &oplus;
-<b>Assembly (MIPS)</b><br>
+<b>Assembly (MIPSel)</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="driver/ldd/mips_asm_setup.htm">
