--- a/driver/ldd/mips_asm_hello.htm
+++ b/driver/ldd/mips_asm_hello.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Linux Device Driver &gt;&gt; Assembly (MIPS)</h3>
+<h3>Linux Device Driver &gt;&gt; Assembly (MIPSel)</h3>
 <p><b>hello, world!</b></p>
 <hr size="1">
 <p>
