--- a/driver.htm
+++ b/driver.htm
@@ -207,7 +207,7 @@ Linux Device Driver (LDD)</h3>
     kthread</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&oplus;
-    chrdev<br>
+    <b>chrdev</b><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="driver/ldd/cpp_chrdev_mknod.htm">
