--- a/driver/ldd/cpp_gpio_output.htm
+++ b/driver/ldd/cpp_gpio_output.htm
@@ -49,27 +49,27 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://github.com/steward-fu/ldd">Source Code</a><br><br>
+1. <a href="https://github.com/steward-fu/website/releases/tag/ldd">ldd</a><br><br>
 
 PocketBeagle開發板上有四顆USR LED，此次範例將使用USR3 LED，位置如下：<br>
 <img src="cpp_gpio_output/1.jpg" class="maxSize"><br><br>
 
-Device Tree
+Device Tree(arch/arm/boot/dts/am335x-pocketbeagle-common.dtsi)
 </p>
 <pre>
 led@5 {
-  label = "beaglebone:green:usr3";
-  gpios = &lt;&amp;gpio1 24 GPIO_ACTIVE_HIGH&gt;
-  linux,default-trigger = "mmc1";
-  default-state = "off";
+    label = "beaglebone:green:usr3";
+    gpios = &lt;&amp;gpio1 24 GPIO_ACTIVE_HIGH&gt;
+    linux,default-trigger = "mmc1";
+    default-state = "off";
 };
 </pre>
 <p>
 P.S. USR3位置是GPIO1-24<br><br>
 
-控制GPIO的輸出方式，基本上，就是操作CPU Register，設定GPIO方向，然後針對該GPIO設定Low、High電位，因此，使用者需要查閱CPU Register說明手冊，過程真是相當繁瑣，而除了控制Register方式之外，Linux Kernel提供一些更友好的GPIO操作函數，供使用者方便開發使用，也大大增加其移植性<br><br>
+Linux驅動程式可以當作是在寫韌體程式，因此，可以在驅動程式裡面直接操作GPIO暫存器，當然也可以遵循Linux Kernel規範，使用統一的GPIO操作函數，如果GPIO驅動程式沒有先移植好的話，那就只能使用暫存器的操作方式，幸運地，在這一版PocketBeagle Kernel中，已經完成GPIO驅動程式的移植，因此，此範例將使用Linux Kernel統一的GPIO操作函數<br><br>
 
-使用步驟：<br>
+使用步驟如下：<br>
 1. gpio_request()<br>
 2. gpio_direction_output()<br>
 3. gpio_set_value()<br>
@@ -95,18 +95,20 @@ MODULE_DESCRIPTION("Linux Driver");
 
 int ldd_init(void)
 {
-  int c=0;
+    int c = 0;
 
-  gpio_request(USR3_LED, "USR3");
-  gpio_direction_output(USR3_LED, 1);
-  for(c=0; c&lt;3; c++){
-    gpio_set_value(USR3_LED, 0);
-    msleep(1000);
-    gpio_set_value(USR3_LED, 1);
-    msleep(1000);
-  }
-  gpio_free(USR3_LED);
-  return 0;
+    gpio_request(USR3_LED, "USR3");
+    gpio_direction_output(USR3_LED, 1);
+
+    for (c = 0; c &lt; 3; c++) {
+        gpio_set_value(USR3_LED, 0);
+        msleep(1000);
+        gpio_set_value(USR3_LED, 1);
+        msleep(1000);
+    }
+
+    gpio_free(USR3_LED);
+    return 0;
 }
  
 void ldd_exit(void)
@@ -117,8 +119,7 @@ module_init(ldd_init);
 module_exit(ldd_exit);
 </pre>
 <p>
-<b>ldd_init</b>: 首先請求GPIO資源，接著設定GPIO輸出方向，最後則是使用迴圈輸出LED閃爍動作<br>
-<b>ldd_exit</b>: 不做任何事情<br><br>
+<b>ldd_init</b>: 請求GPIO資源，接著設定GPIO輸出方向，最後使用迴圈點亮LED(30次)<br><br>
 
 完成<br>
 <img src="cpp_gpio_output/2.jpg" class="maxSize"><br>
