--- a/driver/ldd/cpp_mod_timer.htm
+++ b/driver/ldd/cpp_mod_timer.htm
@@ -49,9 +49,9 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://github.com/steward-fu/ldd">Source Code</a><br><br>
+1. <a href="https://github.com/steward-fu/website/releases/tag/ldd">ldd</a><br><br>
 
-Timer是一種Callback機制，提供使用者設定片段時間後觸發的方式，Timer有區分一次性或者週期性，Linux Kernel提供的mod_timer()是屬於一次性，而計算片段時間則是使用jiffies計算，jiffies是一個Global變數，該變數用來紀錄時間的中斷次數(從開機後)，可以搭配msecs_to_jiffies()計算出需要的時間間隔<br><br>
+Timer是一種Callback機制，提供使用者設定片段時間後觸發的方式，Timer有區分一次性或者週期性，Linux Kernel提供的mod_timer()是屬於一次性，而Timer時間則是使用jiffies計算，jiffies是一個Global變數，該變數用來紀錄時間的中斷次數(從開機後)，可以搭配msecs_to_jiffies()計算出需要的時間間隔<br><br>
 
 使用步驟：<br>
 1. setup_timer()<br>
@@ -76,38 +76,38 @@ MODULE_DESCRIPTION("Linux Driver");
   
 #define USR3_LED ((32 * 1) + 24)
  
-static int period=300;
-static struct timer_list timer={0};
+static int period = 300;
+static struct timer_list timer = {0};
  
 void timer_handler(unsigned long unused)
 {
-  static int state=0;
+    static int state = 0;
       
-  state^= 1;
-  gpio_set_value(USR3_LED, state);
-  mod_timer(&amp;timer, jiffies + msecs_to_jiffies(period));
+    state^= 1;
+    gpio_set_value(USR3_LED, state);
+    mod_timer(&amp;timer, jiffies + msecs_to_jiffies(period));
 }
   
 int ldd_init(void)
 {
-  gpio_request(USR3_LED, "USR3");
-  gpio_direction_output(USR3_LED, 1);
-  setup_timer(&amp;timer, timer_handler, 0);
-  mod_timer(&amp;timer, jiffies + msecs_to_jiffies(period));
-  return 0;
+    gpio_request(USR3_LED, "USR3");
+    gpio_direction_output(USR3_LED, 1);
+    setup_timer(&amp;timer, timer_handler, 0);
+    mod_timer(&amp;timer, jiffies + msecs_to_jiffies(period));
+    return 0;
 }
   
 void ldd_exit(void)
 {
-  del_timer(&amp;timer);
-  gpio_free(USR3_LED);
+    del_timer(&amp;timer);
+    gpio_free(USR3_LED);
 }
   
 module_init(ldd_init);
 module_exit(ldd_exit);
 </pre>
 <p>
-<b>ldd_init</b>: 設定GPIO以及Timer，msecs_to_jiffies()設定的內容，司徒直接使用常數設定<br>
+<b>ldd_init</b>: 設定GPIO以及Timer，msecs_to_jiffies()設定的內容，司徒直接使用PERIOD常數設定<br>
 <b>timer_handler</b>: 閃爍LED之外，由於mod_timer()是屬於一次性，因此，只要再次設定就可以變成週期性Timer<br>
 <b>ldd_exit</b>: 刪除GPIO以及Timer資源<br><br>
 
