--- a/driver/ldd/cpp_workqueue.htm
+++ b/driver/ldd/cpp_workqueue.htm
@@ -49,7 +49,7 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://github.com/steward-fu/ldd">Source Code</a><br><br>
+1. <a href="https://github.com/steward-fu/website/releases/tag/ldd">ldd</a><br><br>
 
 在延遲中斷處理機制上，workqueue是另一個可以使用的方式，workqueue是執行在低優先級別上，因此，可以讓Context Switch繼續執行，意味著使用者可以在workqueue裡面呼叫sleep()相關的函式，這也是跟softirq、tasklet最大的差別，因此，workqueue是相當適合應用在耗時處理的場合<br><br>
 
@@ -78,32 +78,32 @@ MODULE_DESCRIPTION("Linux Driver");
  
 #define BUTTON 27
 
-struct work_struct mywork={0};
-struct workqueue_struct *myworkqueue=NULL;
+struct work_struct mywork = {0};
+struct workqueue_struct *myworkqueue = NULL;
 
 static void workqueue_handler(struct work_struct *work)
 {
-  printk("%s\n", __func__);
+    printk("%s\n", __func__);
 }
 
 static irqreturn_t irq_handler(int irq, void *arg)
 {
-  queue_work(myworkqueue, &amp;mywork);
-  return IRQ_HANDLED;
+    queue_work(myworkqueue, &amp;mywork);
+    return IRQ_HANDLED;
 }
 
 int ldd_init(void)
 {
-  myworkqueue = alloc_workqueue("myworkqueue", 0, 0);
-  INIT_WORK(&amp;mywork, workqueue_handler);
-  request_irq(gpio_to_irq(BUTTON), irq_handler, IRQF_TRIGGER_RISING, "gpio_irq", NULL);
-  return 0;
+    myworkqueue = alloc_workqueue("myworkqueue", 0, 0);
+    INIT_WORK(&amp;mywork, workqueue_handler);
+    request_irq(gpio_to_irq(BUTTON), irq_handler, IRQF_TRIGGER_RISING, "gpio_irq", NULL);
+    return 0;
 }
  
 void ldd_exit(void)
 {
-  free_irq(gpio_to_irq(BUTTON), NULL);
-  destroy_workqueue(myworkqueue);
+    free_irq(gpio_to_irq(BUTTON), NULL);
+    destroy_workqueue(myworkqueue);
 }
  
 module_init(ldd_init);
