N900 How to remove chached file.

--- a/phone/n900/maemo/git.htm
+++ b/phone/n900/maemo/git.htm
@@ -92,6 +92,13 @@ $ git filter-branch --tree-filter 'rm -f xxx' HEAD
 </pre><br>
 
 <p>
+Remove Cached File
+</p>
+<pre>
+$ git rm -r --cached xxx
+</pre><br>
+
+<p>
 Restore status and remove the new files
 </p>
 <pre>
