--- a/handheld/pandora/rebirth/uart.htm
+++ b/handheld/pandora/rebirth/uart.htm
@@ -49,17 +49,35 @@
 <p><b>UART改造</b></p>
 <hr size="1">
 <p>
-雖然司徒已經製作過UART傳輸線，但是，每次都要帶那條特殊的傳輸線，還真是相當不便，因此，司徒這次想來個定型改造，如下圖：<br>
+雖然司徒已經製作過UART傳輸線，但是，每次都要帶那條特殊的傳輸線，還是有些不方便，因此，司徒這次打算使用排針改造，位置如下：<br>
 <img src="uart/1.jpg" class="maxSize"><br><br>
 
-UART2已經燒壞了，司徒只好使用UART3(/dev/ttyO2)<br>
+系統使用的Port是UART3(/dev/ttyO2)，因此，司徒拉出RX3、TX3<br>
 <img src="uart/2.jpg" class="maxSize"><br><br>
 
-接下來就是外殼修改<br>
+外殼修改<br>
 <img src="uart/3.jpg" class="maxSize"><br><br>
 
 完成<br>
-<img src="uart/4.jpg" class="maxSize">
+<img src="uart/4.jpg" class="maxSize"><br><br>
+
+司徒後來覺得直接使用USB Type-C改造，應該會是最漂亮以及方便使用的改造<br>
+<img src="uart/5.jpg" class="maxSize"><br><br>
+
+拆除連接器<br>
+<img src="uart/6.jpg" class="maxSize"><br><br>
+
+使用的腳位<br>
+<img src="uart/7.jpg" class="maxSize"><br><br>
+
+電路圖<br>
+<img src="uart/9.jpg" class="maxSize"><br><br>
+
+跳線<br>
+<img src="uart/8.jpg" class="maxSize"><br><br>
+
+USB Type-C除了可以當作COM Port使用之外，也可以幫Pandora充電，算是相當棒的改造～
+<img src="uart/10.jpg" class="maxSize">
 </p>
 
 <p>
