--- a/driver.htm
+++ b/driver.htm
@@ -355,7 +355,7 @@ Kernel command line(CONFIG_CMDLINE)加上"--"</a><br>
 
 &lowast;
 <a href="driver/ldd/time.htm">
-打印時間</a><br>
+列印時間</a><br>
 
 &lowast;
 <a href="driver/ldd/get_pid.htm">
