--- a/driver/ldd/dma_mmap.htm
+++ b/driver/ldd/dma_mmap.htm
@@ -55,7 +55,7 @@
 <tr><th>dma_mmap_coherent()</th><td>Map DMA Memory</td></tr>
 </table>
 <p>
-假如使用者在Kernel Allocate一塊DMA記憶體，然後該記憶體要給User Application操作的話，就要使用dma_mmap_coherent()，而不是remap_pfn_range()，當然，如果錯用remap_pfn_range()還是可以使用，只是使用者會發現，當User Application在讀寫這塊記憶體時，將會發現都是片斷更新。
+假如使用者在Kernel Allocate一塊DMA記憶體，然後該記憶體要給User Application操作的話，就要使用dma_mmap_coherent()，而不是remap_pfn_range()，當然，如果錯用remap_pfn_range()還是可以使用，只是使用者會發現，當User Application在讀寫這塊記憶體時，更新都是片斷的
 </p>
 
 <p>
