--- a/driver/ldd/ebpf_setup.htm
+++ b/driver/ldd/ebpf_setup.htm
@@ -51,7 +51,7 @@
 參考資訊：<br>
 1. <a href="https://ebpf.io/what-is-ebpf#hook-overview">hook-overview</a><br><br>
 
-如下(debian bullseye x64)：
+Debian x64：
 </p>
 <pre>
 $ sudo apt-get install python3 python3-pip bpfcc-tools libbpfcc libbpfcc-dev
