--- a/driver/ldd/fix_thumb2.htm
+++ b/driver/ldd/fix_thumb2.htm
@@ -50,7 +50,7 @@
 <p>
 問題如下：
 </p>
-<pre class="brush:cpp">
+<pre>
 # insmod test.ko 
 [    7.175590] hello: unknown relocation: 10
 [    7.206189] hello: unknown relocation: 10
@@ -63,7 +63,7 @@ insmod: can't insert 'test.ko': invalid module format
 <pre class="brush:cpp">
     default:
       pr_err("%s: unknown relocation: %u\n",
-             module->name, ELF32_R_TYPE(rel->r_info));
+             module-&gt;name, ELF32_R_TYPE(rel-&gt;r_info));
       return -ENOEXEC;
     }
   }
