--- a/driver/ldd/systap_setup.htm
+++ b/driver/ldd/systap_setup.htm
@@ -52,7 +52,7 @@
 1. <a href="https://wiki.debian.org/SystemTap">SystemTap</a><br>
 2. <a href="https://wiki.debian.org/SourcesList#Debug_Symbol_Packages">SourcesList#Debug_Symbol_Packages</a><br><br>
 
-如下(debian bullseye x64)：
+Debian x64：
 </p>
 <pre>
 $ sudo apt-get install systemtap linux-headers-$(uname -r) coreutils-dbgsym linux-image-$(uname -r)-dbg
