--- a/driver/ldd/time.htm
+++ b/driver/ldd/time.htm
@@ -45,7 +45,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Linux Device Driver</h3>
-<p><b>打印時間</b></p>
+<p><b>列印時間</b></p>
 <hr size="1">
 <p>
 如下：
@@ -53,12 +53,12 @@
 <pre class="brush:cpp">
 void print_time(void)
 {
-  struct timeval t;
-  struct tm broken;
+    struct timeval t;
+    struct tm broken;
 
-  do_gettimeofday(&t);
-  time_to_tm(t.tv_sec, 0, &broken);
-  printk("%d:%d:%d:%ld\n", broken.tm_hour, broken.tm_min, broken.tm_sec, t.tv_usec);
+    do_gettimeofday(&amp;t);
+    time_to_tm(t.tv_sec, 0, &amp;broken);
+    printk("%d:%d:%d:%ld\n", broken.tm_hour, broken.tm_min, broken.tm_sec, t.tv_usec);
 }
 </pre><br>
 
