Pandora How to login through ttyO2.

--- a/handheld.htm
+++ b/handheld.htm
@@ -555,6 +555,10 @@ UART改造</a><br>
     解決"no /dev/dsp"問題</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/pandora/rebirth/mark3/serial.htm">
+    如何透過ttyO2登入</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/pandora/rebirth/mark3/menu_root.htm">
     如何從Menu執行Root的程式</a><br>
 
