--- a/handheld/pyra/review.htm
+++ b/handheld/pyra/review.htm
@@ -54,8 +54,8 @@
 簡要規格
 </p>
 <table>
-  <tr><th>CPU</th><td>TI OMAP5432 1.5 GHz 2x ARM Cortex-A15, 2x ARM Cortex-M4</td></tr>
-  <tr><th>GPU</th><td>PowerVR SGX544-MP2, Vivante GC320</td></tr>
+  <tr><th>CPU</th><td>TI OMAP5432 (ARM Cortex-A15 1.5GHz x 2 and ARM Cortex-M4 1.5GHz x 2)</td></tr>
+  <tr><th>GPU</th><td>PowerVR SGX544-MP2 and Vivante GC320</td></tr>
   <tr><th>RAM</th><td>4GB</td></tr>
   <tr><th>Storage</th><td>32GB</td></tr>
   <tr><th>Screen</th><td>5.0" 1280x720 (Resistive Touch)</td></tr>
