RG Nano Added review page.

--- a/handheld.htm
+++ b/handheld.htm
@@ -148,6 +148,7 @@
     <a href="#psv1000"><img src="img/photos/psv1000.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="PlayStation Vita 1000"/></a>
     <a href="#psv2000"><img src="img/photos/psv2000.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="PlayStation Vita 2000"/></a>
     <a href="#funkeys"><img src="img/photos/funkeys.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="FunKey S"/></a>
+    <a href="#rgnano"><img src="img/photos/rgnano.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="RG Nano"/></a>
     <a href="#pico"><img src="img/photos/pico.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="PicoSystem"/></a>
     <a href="#ggm"><img src="img/photos/ggm.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Game Gear Micro"/></a>
     <a href="#gamego"><img src="img/photos/gamego.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="GameGo"/></a>
@@ -4146,6 +4147,15 @@ build kernel 4.14.14</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/funkeys/cpp_screentear.htm">
     Screen Tearing</a><br>
+<br><br><br><br>
+
+<div id="rgnano"></div>
+<h3><img src="img/photos/rgnano.jpg" class="floatLeft"/>
+RG Nano</h3>
+<hr size="1"><br><br><br><br><br>
+&lowast;
+<a href="handheld/rgnano/review.htm">
+介紹</a><br>
 <br><br><br><br>
 
 <div id="pico"></div>
