Pandora Fixed /dev/dsp issue.

--- a/handheld.htm
+++ b/handheld.htm
@@ -528,6 +528,10 @@ UART改造</a><br>
 <a href="handheld/pandora/rebirth/motor.htm">
 支援振動馬達</a><br>
 
+&lowast;
+<a href="handheld/pandora/rebirth/fix_dsp.htm">
+解決"/dev/dsp"只有單聲道的問題</a><br>
+
 &oplus;
 <b>Debian Mark3</b><br>
 
