--- a/handheld/pandora/1ghz/superzaxxon/mount_sd_utf8.htm
+++ b/handheld/pandora/1ghz/superzaxxon/mount_sd_utf8.htm
@@ -72,7 +72,7 @@ $ sudo nano /etc/xdg/xfce4/mount.rc
 
 <pre class="brush:cpp">
 [vfat]
-uid=<auto>
+uid=&lt;auto&gt;
 utf8=true
 shotname=winnt
 </pre><br>
