Pixel 3a XL Refined.

--- a/phone/pixel3axl/dd_build_kernel-4.9.124.htm
+++ b/phone/pixel3axl/dd_build_kernel-4.9.124.htm
@@ -61,8 +61,8 @@ $ cd
 $ wget https://github.com/steward-fu/pixel3axl/releases/download/v1.1/kernel.tar.gz
 $ tar xvf kernel.tar.gz
 $ cd kernel
-$ ARCH=arm64 CC=clang CLANG_TRIPLE=aarch64-linux-gnu- CROSS_COMPILE=aarch64-linux-gnu- make droidian_defconfig
-$ ARCH=arm64 CC=clang CLANG_TRIPLE=aarch64-linux-gnu- CROSS_COMPILE=aarch64-linux-gnu- make all -j4
+$ ARCH=arm64 CC=clang CLANG_TRIPLE=aarch64-linux-gnu- CROSS_COMPILE=aarch64-linux-gnu- CROSS_COMPILE_ARM32=arm-linux-gnueabihf- make droidian_defconfig
+$ ARCH=arm64 CC=clang CLANG_TRIPLE=aarch64-linux-gnu- CROSS_COMPILE=aarch64-linux-gnu- CROSS_COMPILE_ARM32=arm-linux-gnueabihf- make all -j4
 
 $ cd
 $ wget https://github.com/steward-fu/pixel3axl/releases/download/v1.0/flash.tar.gz
