Pixel 3a XL Refined.

--- a/phone/pixel3axl/dd_install.htm
+++ b/phone/pixel3axl/dd_install.htm
@@ -57,12 +57,11 @@
 </p>
 <pre>
 $ cd
-$ wget https://github.com/steward-fu/pixel3axl/releases/download/v1.0/platform-tools_r33.0.3-linux.zip
+$ wget https://github.com/steward-fu/website/releases/download/pixel-3a-xl/platform-tools_r33.0.3-linux.zip
 $ unzip platform-tools_r33.0.3-linux.zip
-$ mv platform-tools /tmp
-$ export PATH=/tmp/platform-tools:$PATH
+$ export PATH=~/platform-tools:$PATH
 
-$ wget https://github.com/steward-fu/pixel3axl/releases/download/v1.0/bonito-pq3b.190801.002-factory-61a2836d.zip
+$ wget https://github.com/steward-fu/website/releases/download/pixel-3a-xl/bonito-pq3b.190801.002-factory-61a2836d.zip
 $ unzip bonito-pq3b.190801.002-factory-61a2836d.zip
 $ cd bonito-pq3b.190801.002
 $ vim flash-all.sh
@@ -86,9 +85,9 @@ P.S. 刷完flash-all.sh後，記得要手動進入fastboot模式<br><br>
 </p>
 <pre>
 $ cd
-$ wget https://github.com/steward-fu/pixel3axl/releases/download/v1.0/droidian-rootfs-api28gsi-arm64_20211127.zip
-$ wget https://github.com/steward-fu/pixel3axl/releases/download/v1.0/droidian-adaptation-google-sargo-arm64_20211127.zip
-$ wget https://github.com/steward-fu/pixel3axl/releases/download/v1.0/twrp-3.4.0-0-sargo.img
+$ wget https://github.com/droidian-images/rootfs-api28gsi-all/releases/download/droidian%2Fbullseye%2F23/droidian-rootfs-api28gsi-arm64_20211127.zip
+$ wget https://github.com/droidian-images/rootfs-api28gsi-all/releases/download/droidian%2Fbullseye%2F23/droidian-adaptation-google-sargo-arm64_20211127.zip
+$ wget https://dl.twrp.me/sargo/twrp-3.4.0-0-sargo.img
 
 $ fastboot -aa
 $ fastboot reboot bootloader
@@ -101,7 +100,7 @@ $ adb sideload droidian-adaptation-google-sargo-arm64_20211127.zip
 <p>
 P.S. 要執行sideload前，記得先在TWRP執行sideload選項，然後USB線記得拔插<br><br>
 
-Droidian的Terminal比Ubunt Touch好用，加上Droidian可以真正使用到48GB空間，比起Ubunt Touch更適合開發者使用，不過，Droidian系統相對不穩定，因此，只建議深度Terminal開發者使用<br>
+Droidian的Terminal比Ubunt Touch好用，加上Droidian可以真正使用到48GB空間，比起Ubunt Touch更適合開發者使用，不過，Droidian系統相對不穩定<br>
 <img src="dd_install/1.jpg" class="maxSize">
 </p>
 
