--- a/phone/pixel3axl/fix_fastboot.htm
+++ b/phone/pixel3axl/fix_fastboot.htm
@@ -56,10 +56,9 @@
 </p>
 <pre>
 $ cd
-$ wget https://github.com/steward-fu/pixel3axl/releases/download/v1.0/platform-tools_r33.0.3-linux.zip
+$ wget https://github.com/steward-fu/website/releases/download/pixel-3a-xl/platform-tools_r33.0.3-linux.zip
 $ unzip platform-tools_r33.0.3-linux.zip
-$ mv platform-tools /tmp
-$ export PATH=/tmp/platform-tools:$PATH
+$ export PATH=~/platform-tools:$PATH
 $ fastboot --version
     fastboot version 33.0.3-8952118
     Installed as /tmp/platform-tools/fastboot
