--- a/phone/pixel3axl/repack_boot_img.htm
+++ b/phone/pixel3axl/repack_boot_img.htm
@@ -52,20 +52,18 @@
 如下：
 </p>
 <pre>
-#!/bin/sh
+#!/bin/bash
 PAGE_SIZE=4096
 BASE=0x00000000
+DTB_OFFSET=0x1f00000
+TAGS_OFFSET=0x00000100
+SECOND_OFFSET=0x00f00000
 KERNEL_OFFSET=0x00008000
 RAMDISK_OFFSET=0x01000000
-SECOND_OFFSET=0x00f00000
-TAGS_OFFSET=0x00000100
-DTB_OFFSET=0x1f00000
 CMDLINE="console=ttyMSM0,115200n8 androidboot.console=ttyMSM0 printk.devkmsg=on msm_rtb.filter=0x237 ehci-hcd.park=3 service_locator.enable=1 firmware_class.path=/vendor/firmware datapart=/dev/mmcblk0p72 cgroup.memory=nokmem lpm_levels.sleep_disabled=1 apparmor=1 security=apparmor"
 
 rm -rf boot_new.img
 mkbootimg --kernel Image.lz4-dtb --ramdisk ramdisk --dtb dtb --cmdline "$CMDLINE" --base $BASE --kernel_offset $KERNEL_OFFSET --ramdisk_offset $RAMDISK_OFFSET --second_offset $SECOND_OFFSET --dtb_offset $DTB_OFFSET --pagesize $PAGE_SIZE -o boot_new.img
-sudo dd if=boot_new.img of=/dev/mmcblk0p13
-sync
 </pre><br>
 
 <p>
