--- a/phone/pixel3axl/boot_restore.htm
+++ b/phone/pixel3axl/boot_restore.htm
@@ -53,7 +53,7 @@
 </p>
 <pre>
 $ cd
-$ wget https://github.com/steward-fu/pixel3axl/releases/download/v1.0/droidian-adaptation-google-sargo-arm64_20211127.zip
+$ wget https://github.com/droidian-images/rootfs-api28gsi-all/releases/download/droidian%2Fbullseye%2F23/droidian-adaptation-google-sargo-arm64_20211127.zip
 $ unzip droidian-adaptation-google-sargo-arm64_20211127.zip
 $ fastboot flash boot droidian-adaptation-google-sargo-arm64_20211127/boot.img
 </pre><br>
