--- a/phone/pixel3axl/dd_build_kernel-4.9.124.htm
+++ b/phone/pixel3axl/dd_build_kernel-4.9.124.htm
@@ -58,20 +58,25 @@
 $ sudo apt install build-essential libncurses-dev bison flex libssl-dev libelf-dev bc git gcc-aarch64-linux-gnu libfdt-dev clang
 
 $ cd
-$ wget https://github.com/steward-fu/pixel3axl/releases/download/v1.1/kernel.tar.gz
-$ tar xvf kernel.tar.gz
+$ wget https://github.com/steward-fu/website/releases/download/pixel-3a-xl/lineageos_linux-x86.tar.gz
+$ tar xvf lineageos_linux-x86.tar.gz
+
+$ wget https://github.com/steward-fu/website/releases/download/pixel-3a-xl/droidian_kernel.tar.gz
+$ tar xvf droidian_kernel.tar.gz
 $ cd kernel
+$ export PATH=~/linux-x86/bin/:$PATH
 $ ARCH=arm64 CC=clang CLANG_TRIPLE=aarch64-linux-gnu- CROSS_COMPILE=aarch64-linux-gnu- CROSS_COMPILE_ARM32=arm-linux-gnueabihf- make droidian_defconfig
 $ ARCH=arm64 CC=clang CLANG_TRIPLE=aarch64-linux-gnu- CROSS_COMPILE=aarch64-linux-gnu- CROSS_COMPILE_ARM32=arm-linux-gnueabihf- make all -j4
 
-$ cd
-$ wget https://github.com/steward-fu/pixel3axl/releases/download/v1.0/flash.tar.gz
-$ tar xvf flash.tar.gz
-$ cd Flash
+$ wget https://github.com/steward-fu/website/releases/download/pixel-3a-xl/droidian_flash.tar.gz
+$ tar xvf droidian_flash.tar.gz
+$ cd flash
 $ cp ../kernel/arch/arm64/boot/Image.lz4-dtb .
 $ ./run.sh
 </pre>
 <p>
+P.S. 進入fastboot後，刷入boot_new.img即可<br><br>
+
 <img src="dd_build_kernel-4.9.124/1.jpg" class="maxSize">
 </p>
 
